[package]
name = "rustgpt-autocode"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.29", features = ["derive"] }
dotenv = "0.15.0"
langchain-rust = { version = "4.6.0", features = ["postgres"] }
octocrab = "0.43.0"
serde_json = "1.0.138"
tokio = "1.43.0"
